--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,10 +6,12 @@
   </head>
   <body>
     <h1>Search <%=shopData.shopName%></h1>
-    <form action="search_result" method="GET">
-      <p>What book do you want?</p>
-      <input id="search-box" type="text" name="search_text">
-      <input type="submit" value="Search" >
-    </form>
+<form action="/books/search-result" method="GET">
+  <p>What book do you want?</p>
+  <input type="text" name="keyword" required>
+  <input type="submit" value="Search">
+</form>
+
+    <p><a href="/">Back to home</a></p>
   </body>
 </html>
