--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,16 @@
     
     <ul>
       <li><a href="/about">About <%= shopData.shopName %></a></li>
-      <li><a href="/books/search">Search for books</a></li>
+      
+      <!-- USER ACCOUNT LINKS -->
+      <li><a href="/users/login">Log in to your account</a></li>
       <li><a href="/users/register">Register with us</a></li>
+      
+      <!-- AUDIT LOG LINK -->
+      <li><a href="/users/audit">View Login Audit Log</a></li>
+      
+      <!-- BOOK LINKS -->
+      <li><a href="/books/search">Search for books</a></li>
       <li><a href="/books/addbook">Add a new book</a></li>
       <li><a href="/books/list">List books</a></li>
       <li><a href="/books/bargainbooks">Bargain books (&lt; £20)</a></li>
