--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Register for <%=shopData.shopName%></title>
-    <link rel="stylesheet"  type="text/css" href="/main.css" />
+    <link rel="stylesheet"  type="text/css" href="/main.css" />
   </head>
   <body>
     <h1>Register for <%=shopData.shopName%></h1>
@@ -10,6 +10,9 @@
         <p>First name: <input id="first" type="text" name="first" /></p>
         <p>Last name: <input id="last" type="text" name="last" /></p>
         <p>Email: <input id="email" type="email" name="email" /></p>
+        
+        <p>Username: <input id="username" type="text" name="username" required/></p>
+        <p>Password: <input id="password" type="password" name="password" required/></p>
         <input type="submit" value="Register" />
       </form>
   </body>
