--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,8 @@
       <!-- USER ACCOUNT LINKS -->
       <li><a href="/users/login">Log in to your account</a></li>
       <li><a href="/users/register">Register with us</a></li>
-      
+      <li><a href="/logout">Logout</a></li>
+
       <!-- AUDIT LOG LINK -->
       <li><a href="/users/audit">View Login Audit Log</a></li>
       
