--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,10 @@
 
       <!-- AUDIT LOG LINK -->
       <li><a href="/users/audit">View Login Audit Log</a></li>
-      
+
+      <!-- WEATHER LINK -->
+      <li><a href="/weather">Weather forecast</a></li>
+
       <!-- BOOK LINKS -->
       <li><a href="/books/search">Search for books</a></li>
       <li><a href="/books/addbook">Add a new book</a></li>
